CI images update

--- a/images/tham-bali-180x230/config.ini
+++ b/images/tham-bali-180x230/config.ini
@@ -4,11 +4,11 @@ url = https://www.diepxuan.com/tham-bali-180x230.html
 lastopen = 2024-06-07 00:36:20
 
 [search]
-lastsearch = 2024-07-19 14:14:13
+lastsearch = 2024-07-19 16:28:29
 
 [www.noithatpassion.com]
-match = -129.4%%
-title = Thảm Phủ Sofa Trang Trí Thổ Cẩm Hoa Văn Đỏ Hồng
+match = -123.5%%
+title = Thảm Phủ Sofa Trang Trí Thổ Cẩm Hoa Văn Đỏ ...
 url = https://www.noithatpassion.com/products/tham-phu-sofa-trang-tri-tho-cam-hoa-van-do-hong
 
 [www.intellect-worldwide.com]
@@ -37,9 +37,9 @@ title = 797 регион это откуда [vespjE]
 url = https://www.tles.tyc.edu.tw/instpage.php?=LoginId,LogoffReason,PunchTime&h=1200&r=0&url=https://xn--80adyaqv.xn--p1ai/5813267pam4r3v53xy275comafe88y
 
 [www.instagram.com]
-match = -77.8%%
-title = Instagram
-url = https://www.instagram.com/sophmapua/reel/C8XBG8Svzyh/
+match = -188.2%%
+title = ♡ TISHY ୨₍ᐢ.ˬ.ᐢ₎୧ | these bali sunset photos deserve a ...
+url = https://www.instagram.com/tishtuazon/p/CxxdaTGPYur/?img_index=1
 
 [m.facebook.com]
 match = -247.1%%
@@ -47,9 +47,9 @@ title = Bali expats | Are there different size scooters available on ...
 url = https://m.facebook.com/groups/expatsbali/permalink/1155818137794400/
 
 [www.tripadvisor.com]
-match = -188.2%%
-title = Bali sunset - All You Need to Know BEFORE You Go (2024)
-url = https://www.tripadvisor.com/Attraction_Review-g13792473-d4342095-Reviews-Bali_sunset-Bali_New_Taipei.html
+match = -117.6%%
+title = THE 10 BEST Bali Antique Stores (Updated 2024)
+url = https://www.tripadvisor.com/Attractions-g294226-Activities-c26-t137-Bali.html
 
 [www.pinterest.com]
 match = -217.6%%
@@ -75,4 +75,9 @@ url = https://www.youtube.com/watch?v=faLzDTi9gaM
 match = -223.5%%
 title = Where to get good locks for my bags? - Bali Forum - Tripadvisor
 url = https://www.tripadvisor.co.nz/ShowTopic-g294226-i7220-k7191638-o10-Where_to_get_good_locks_for_my_bags-Bali.html
+
+[www.viceroybali.com]
+match = 0.0%%
+title = 
+url = https://www.viceroybali.com/en/blog/what-is-the-most-luxury-area-in-bali/
 
