CI images update

--- a/images/man-ren-16/config.ini
+++ b/images/man-ren-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-ren-16.html
 lastopen = 2024-06-07 00:52:49
 
 [search]
-lastsearch = 2024-07-19 06:45:04
+lastsearch = 2024-07-19 16:45:38
 
 [quizlet.com]
 match = -170.0%%
@@ -52,9 +52,9 @@ title =
 url = https://en.wikipedia.org/wiki/MC_Ren
 
 [books.google.com]
-match = -430.0%%
-title = Proceedings of the 10th West Coast Conference on Formal ...
-url = https://books.google.com/books?id=BQ93UeXC1_kC&pg=PA187&lpg=PA187&dq=man+ren+16&source=bl&ots=ftlflLJoia&sig=ACfU3U1ijMkj0oPaykWqntANY-AR3HZZrA&hl=en&sa=X&ved=2ahUKEwjix67Y4rGHAxUJGzQIHVLJDS4Q6AF6BAgXEAM
+match = -440.0%%
+title = The Monasteries of the Wadi 'n Natrûn: The history of the ...
+url = https://books.google.com/books?id=_mIPAQAAMAAJ&pg=PA206&lpg=PA206&dq=man+ren+16&source=bl&ots=Hlowzp-5BY&sig=ACfU3U1ExZIoqv0SzDDumiorUND_OHMXbw&hl=en&sa=X&ved=2ahUKEwjY9r326LKHAxUjTDABHRjWDMIQ6AF6BAgkEAM
 
 [www.phillyvoice.com]
 match = 0.0%%
@@ -67,9 +67,9 @@ title = The Ren Men (@the_ren_men)
 url = https://www.instagram.com/the_ren_men/
 
 [www.youtube.com]
-match = -170.0%%
-title = Ren - 16 bar challenge *REACTION*
-url = https://www.youtube.com/watch?v=DN-xEHVEvtM
+match = -133.3%%
+title = Ren
+url = https://www.youtube.com/channel/UCqq3VcwPGseErHUa0-xLInQ
 
 [www.va.gov]
 match = -210.0%%
