--- a/images/chan-hoi-dior/config.ini
+++ b/images/chan-hoi-dior/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chan-hoi-dior.html
 lastopen = 2024-06-09 23:37:49
 
 [search]
-lastsearch = 2024-07-19 16:28:58
+lastsearch = 2024-07-19 16:46:02
 
 [www.instagram.com]
-match = -176.9%%
-title = HArris CHan | My first dior saddle bagggg. 🎅🏽🧝🏻 ...
-url = https://www.instagram.com/_harris_chan_/p/Cz3dzHtyRjX/
+match = -161.5%%
+title = (@katrinacyt) • Instagram photos and videos
+url = https://www.instagram.com/katrinacyt/
 
 [hk.linkedin.com]
-match = -100.0%%
-title = Hoi Yee Ng - Christian Dior Couture
-url = https://hk.linkedin.com/in/hoi-yee-ng-662733106
+match = -76.9%%
+title = Fanny Chan - Christian Dior Couture
+url = https://hk.linkedin.com/in/fanny-chan-938952bb
 
 [wwd.com]
 match = -184.6%%
