--- a/images/man-tu-bung-dinh-vuong-14/config.ini
+++ b/images/man-tu-bung-dinh-vuong-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-tu-bung-dinh-vuong-14.html
 lastopen = 2024-06-07 00:50:47
 
 [search]
-lastsearch = 2024-07-19 13:43:59
+lastsearch = 2024-07-19 16:44:58
 
 [shopee.vn]
 match = -8.0%%
@@ -67,9 +67,9 @@ title = Màn Chụp Tự Bung Đỉnh Vuông Cao Cấp -
 url = https://vinamartvn.com/mua/nha-cua-doi-song/man-chup-tu-bung-thong-minh-dinh-vuong-cao-cap/
 
 [www.youtube.com]
-match = -32.0%%
-title = Màn Chụp Tự Bung Đỉnh Vuông Gấp Gọn Thông Minh Thiên ...
-url = https://www.youtube.com/watch?v=nPMDzyjqoUI
+match = -52.0%%
+title = Hướng Dẫn Gấp Màn Chụp Tự Bung - Cách Gấp Màn Chụp ...
+url = https://www.youtube.com/watch?v=AEddlekH6zA
 
 [demvip.vn]
 match = 52.0%%
