--- a/images/tui-nem-korea-tuan-anh-18/config.ini
+++ b/images/tui-nem-korea-tuan-anh-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-nem-korea-tuan-anh-18.html
 lastopen = 2024-06-10 01:34:06
 
 [search]
-lastsearch = 2024-07-19 15:24:09
+lastsearch = 2024-07-19 16:49:51
 
 [tuananh.vn]
 match = 22.2%%
@@ -12,9 +12,9 @@ title = Đệm Korea Gấm Plus
 url = https://tuananh.vn/dem-korea-gam-plus-p223.html
 
 [demxanh.com]
-match = -48.0%%
-title = [Cập nhật] Bảng giá đệm bông ép Tuấn Anh khuyến mại ...
-url = https://demxanh.com/bang-gia-dem-bong-ep-tuan-anh-2021.html
+match = -28.0%%
+title = Đệm bông ép Tuấn Anh Korea gấm Plus chính hãng
+url = https://demxanh.com/dem-bong-ep-tuan-anh-korea-gam-plus.html
 
 [demkhangduy.com]
 match = 25.0%%
@@ -42,9 +42,9 @@ title = Đệm bông ép Tuấn Anh Korea Gấm - chăn ga gối
 url = https://entershopping.vn/dem-bong-ep-tuan-anh-korea-gam.html
 
 [dem24h.vn]
-match = 12.0%%
-title = Đệm Bông Ép Korea Vải Cotton Tuấn Anh
-url = https://dem24h.vn/dem-bong-ep-korea-vai-cotton
+match = -8.0%%
+title = Đệm Bông Ép Bề Mặt Masage Korea Plus
+url = https://dem24h.vn/dem-bong-ep-be-mat-masage-korea-plus
 
 [suongtuyet.com]
 match = 4.0%%
