--- a/images/chieu-truc-thai-den15/config.ini
+++ b/images/chieu-truc-thai-den15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-thai-den15.html
 lastopen = 2024-06-07 00:18:02
 
 [search]
-lastsearch = 2024-07-19 14:20:03
+lastsearch = 2024-07-19 17:13:29
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -17,9 +17,9 @@ title = Chieu truc thai lan hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=chieu truc thai lan
 
 [shopee.vn]
-match = -42.9%%
-title = chiếu trúc hạt vàng cước đỏ thái lan đủ kích cỡ
-url = https://shopee.vn/chiếu-trúc-hạt-vàng-cước-đỏ-thái-lan-đủ-kích-cỡ-i.194586860.3058965326
+match = -90.5%%
+title = [ Hàng chuẩn ] Chiếu trúc Thái Lan hạt vàng 1m5 1m6 1m8 ...
+url = https://shopee.vn/-Hàng-chuẩn-Chiếu-trúc-Thái-Lan-hạt-vàng-1m5-1m6-1m8-2m2-cao-cấp-hạt-hồ-lô-không-viền-i.114438421.7333602881
 
 [demxanh.com]
 match = -28.6%%
@@ -395,4 +395,9 @@ url = https://congan.binhthuan.gov.vn/tap-hop-thong-tin-bao-chi-phan-anh-lien-qu
 match = -114.3%%
 title = Giới trẻ rần rần rủ nhau bóc nhãn chai đồ uống TH, vừa ...
 url = https://toquoc.vn/gioi-tre-ran-ran-ru-nhau-boc-nhan-chai-do-uong-th-vua-san-qua-chat-vua-giai-nhiet-he-20240718172711652.htm
+
+[nghean.gov.vn]
+match = -128.6%%
+title = Chia sẻ kết quả triển khai các giải pháp phát triển mô hình ...
+url = https://nghean.gov.vn/tin-noi-bat/chia-se-ket-qua-trien-khai-cac-giai-phap-phat-trien-mo-hinh-phong-chong-duoi-nuoc-tre-em-667018
 
