CI images update

--- a/images/chieu-cay-moc-hoa18/config.ini
+++ b/images/chieu-cay-moc-hoa18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-moc-hoa18.html
 lastopen = 2024-06-09 22:43:05
 
 [search]
-lastsearch = 2024-07-19 12:50:26
+lastsearch = 2024-07-19 17:32:02
 
 [hoa18.com]
 match = -84.2%%
@@ -157,9 +157,9 @@ title = Soái Ca Comic – Truyện Tranh Online
 url = https://soaicacomic.top/
 
 [trithucvn.co]
-match = -157.9%%
-title = Ông Trump ký văn bản chính thức chấp nhận là đề cử viên ...
-url = https://trithucvn.co/the-gioi/ong-trump-ky-van-ban-chinh-thuc-chap-nhan-la-de-cu-vien-tong-thong-2024-cua-dch.html
+match = -131.6%%
+title = Ông Donald Trump phát biểu tại Đại hội ĐCH, kêu gọi ...
+url = https://trithucvn.co/the-gioi/ong-donald-trump-phat-bieu-tai-dai-hoi-dch-keu-goi-doan-ket-nuoc-my.html
 
 [bptv.vn]
 match = -57.9%%
