--- a/images/chieu-lac-soc-18/config.ini
+++ b/images/chieu-lac-soc-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-18.html
 lastopen = 2024-06-06 16:53:55
 
 [search]
-lastsearch = 2024-07-19 13:38:54
+lastsearch = 2024-07-19 17:37:23
 
 [scholar.google.com]
 match = -43.8%%
@@ -73,8 +73,8 @@ url = https://baodaknong.vn/cay-lac-cay-coi-y-nghia-hinh-anh-cach-trong-cham-soc
 
 [baomoi.com]
 match = -206.2%%
-title = Vòng 12 Giải futsal HDBank vô địch quốc gia 2024: Thái ...
-url = https://baomoi.com/vong-12-giai-futsal-hdbank-vo-dich-quoc-gia-2024-thai-son-bac-bi-sahako-can-duong-dua-vo-dich-c49674579.epi
+title = Diễn biến mới vụ nguyên Trưởng phòng một đại học lớn ở ...
+url = https://baomoi.com/dien-bien-moi-vu-nguyen-truong-phong-mot-dai-hoc-lon-o-tp-hcm-mat-lien-lac-c49675598.epi
 
 [ivymoda.com]
 match = -193.8%%
