--- a/images/tham-giuong-ii-120x190/config.ini
+++ b/images/tham-giuong-ii-120x190/config.ini
@@ -4,11 +4,11 @@ url = https://www.diepxuan.com/tham-giuong-ii-120x190.html
 lastopen = 2024-06-17 21:10:17
 
 [search]
-lastsearch = 2024-07-19 11:36:37
+lastsearch = 2024-07-19 17:35:32
 
 [demxanh.com]
-match = -27.3%%
-title = Thảm trải giường lông cừu TLC 07 - Đệm Xanh
+match = -45.5%%
+title = Thanh lý thảm trải giường lông cừu giá cực rẻ
 url = https://demxanh.com/tham-trai-giuong-long-cuu-tlc-07.html
 
 [demre.com.vn]
@@ -17,8 +17,8 @@ title = Thảm ghế thảm giường - Trang 4
 url = https://demre.com.vn/tham-ghe-tham-giuong?sortby=created-desc&page=4
 
 [thegioidemonline.vn]
-match = -45.5%%
-title = Thảm trải giường lông cừu giá rẻ TLC07 - Hà Nội
+match = -81.8%%
+title = Thảm trải giường lông cừu TLC07 - Hà Nội - Chăn ga gối
 url = https://thegioidemonline.vn/tham-trai-giuong-long-cuu-tlc07.html
 
 [noithatkenli.vn]
@@ -27,8 +27,8 @@ title = Tìm Hiểu Kích Thước Giường Ngủ Các Loại
 url = https://noithatkenli.vn/kich-thuoc-giuong-ngu-cac-loai/
 
 [ru9.vn]
-match = -81.8%%
-title = Đệm giường đơn giá tốt, bảng giá các loại ... - Ru9
+match = -72.7%%
+title = Đệm giường đơn có những kích thước nào? Bảng giá
 url = https://ru9.vn/blogs/magazine/dem-giuong-don
 
 [cafeland.vn]
@@ -57,8 +57,8 @@ title = ++| A M V - Member Profile: carot22
 url = https://www.animemusicvideos.org/members/members_myprofile.php?user_id=1222186
 
 [jysk.vn]
-match = -72.7%%
-title = Kích thước giường ngủ tiêu chuẩn và thông dụng ...
+match = -95.5%%
+title = Kích thước giường ngủ tiêu chuẩn và thông dụng nhất ...
 url = https://jysk.vn/kich-thuoc-giuong-ngu
 
 [anawood.vn]
