--- a/images/chieu-dieu-hoa-cao-su-180x200/config.ini
+++ b/images/chieu-dieu-hoa-cao-su-180x200/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-cao-su-180x200.html
 lastopen = 2024-07-01 06:28:11
 
 [search]
-lastsearch = 2024-07-19 04:31:11
+lastsearch = 2024-07-19 17:39:07
 
 [demxanh.com]
-match = 27.6%%
-title = Chiếu điều hòa cao su non Tencel vàng chanh
-url = https://demxanh.com/chieu-dieu-hoa-cao-su-non-tencel-vang-chanh.html
+match = 24.1%%
+title = Chiếu điều hòa cao su non đa sắc xám hình hoa
+url = https://demxanh.com/chieu-dieu-hoa-cao-su-non-da-sac-xam-hinh-hoa.html
 
 [leflair.com]
 match = 6.9%%
@@ -37,9 +37,9 @@ title = chiếu điều hòa cao su non tencel latex 5D mềm mịn mướt ...
 url = https://shopee.vn/product/1063512412/22353005341?gsht=sjFxkDeGHTM5gwwS
 
 [entershopping.vn]
-match = 3.4%%
-title = Chiếu điều hòa cao su non Tencel vàng đậm - Hà Nội
-url = https://entershopping.vn/chieu-dieu-hoa-cao-su-non-tencel-vang-dam.html
+match = -13.8%%
+title = Chiếu điều hòa cao su non Tencel Xanh biển - chăn ga gối
+url = https://entershopping.vn/chieu-dieu-hoa-cao-su-non-tencel-xanh-bien.html
 
 [kyoryo.vn]
 match = 20.7%%
