--- a/images/chieu-nhua-thai-binh-08/config.ini
+++ b/images/chieu-nhua-thai-binh-08/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-nhua-thai-binh-08.html
 lastopen = 2024-06-09 23:16:13
 
 [search]
-lastsearch = 2024-07-19 10:21:58
+lastsearch = 2024-07-19 17:33:59
 
 [shopee.vn]
 match = -47.8%%
@@ -59,7 +59,7 @@ url = https://thaibinhtv.vn/news/0/61643/san-xuat-theo-chieu-huong-hien-dai-quy-
 [www.diepxuan.com]
 match = 26.1%%
 title = Chiếu nhựa Thái Bình 80x190 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-nhua-thai-binh-80x190.html?srsltid=AfmBOopmd9pQyAwlnngGp8nEvDJXeFBC0shVvMbrhWJk980Z0rdI4WDZ
+url = https://www.diepxuan.com/chieu-nhua-thai-binh-80x190.html
 
 [baothaibinh.com.vn]
 match = 17.4%%
