--- a/images/chieu-truc-thai-den14/config.ini
+++ b/images/chieu-truc-thai-den14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-thai-den14.html
 lastopen = 2024-06-09 23:36:30
 
 [search]
-lastsearch = 2024-07-19 15:32:34
+lastsearch = 2024-07-19 17:38:56
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -565,4 +565,19 @@ url = https://esign.misa.vn/6850/ke-khai-thue-thu-nhap-ca-nhan-online/
 match = -100.0%%
 title = Trẻ 14 tháng biết làm gì? Cách chăm sóc bé khỏe mạnh
 url = https://www.pharmacity.vn/tre-14-thang-biet-lam-gi.htm
+
+[nbtv.vn]
+match = -104.8%%
+title = Áp thấp nhiệt đới giật cấp 8, di chuyển hướng Tây Bắc
+url = https://nbtv.vn/ap-thap-nhiet-doi-giat-cap-8-di-chuyen-huong-tay-bac-75916.html
+
+[baodongkhoi.vn]
+match = -114.3%%
+title = Áp thấp nhiệt đới trên biển Đông giật cấp 8, di chuyển ...
+url = https://baodongkhoi.vn/ap-thap-nhiet-doi-tren-bien-dong-giat-cap-8-di-chuyen-huong-tay-bac-19072024-a132758.html
+
+[demsonghonghanoi.com]
+match = -100.0%%
+title = Loại chiếu trúc nào tốt nhất trên thị trường? - ĐỆM SÔNG HỒNG
+url = https://demsonghonghanoi.com/loai-chieu-truc-nao-tot-nhat-tren-thi-truong/
 
