--- a/images/chieu-lac-soc-16/config.ini
+++ b/images/chieu-lac-soc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-16.html
 lastopen = 2024-06-09 23:48:14
 
 [search]
-lastsearch = 2024-07-19 14:19:05
+lastsearch = 2024-07-19 17:47:33
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -62,19 +62,19 @@ title = Rạp Lotte Kosmo Tây Hồ - Lịch chiếu, Giá vé, Ưu đãi
 url = https://moveek.com/rap/lotte-kosmo-tay-ho/
 
 [baolongan.vn]
-match = -125.0%%
-title = Một ngày ở làng dệt chiếu lác Long Cang, Cần Đước
-url = https://baolongan.vn/mot-ngay-o-lang-det-chieu-lac-long-cang-can-duoc-a5230.html
+match = -31.2%%
+title = Giữ nghề dệt chiếu Long Cang
+url = https://baolongan.vn/giu-nghe-det-chieu-long-cang-a169502.html
 
 [www.youtube.com]
-match = -256.2%%
-title = Tin tức 24h tối 18/7: Mâu thuẫn, em trai bị anh ruột dùng hung ...
-url = https://www.youtube.com/watch?v=hteDrQdI8UA
+match = -231.2%%
+title = Bộ ngoại giao thông tin về việc điều tra, hậu sự nhóm người ...
+url = https://www.youtube.com/watch?v=rUGm2ZH8ccc
 
 [books.google.com]
-match = -218.8%%
-title = Chức vụ cung ứng Lời Tập 25 Số 1 Kì 2: Nghiên cứu kết tinh ...
-url = https://books.google.com/books?id=FeBCEAAAQBAJ&pg=PT182&lpg=PT182&dq=chieu+lac+soc+16&source=bl&ots=aHabBP7kzd&sig=ACfU3U34UxHEVHS2zof5_hB4vzuac19YgQ&hl=en&sa=X&ved=2ahUKEwjEkbrcurGHAxUDFVkFHeOzDhwQ6AF6BAggEAM
+match = -156.2%%
+title = Nizu #3: Bạn bè - Page 14 - Google Books Result
+url = https://books.google.com/books?id=saXpEAAAQBAJ&pg=PA14&lpg=PA14&dq=chieu+lac+soc+16&source=bl&ots=dtkMojkl83&sig=ACfU3U2yjzchC7YOMRCieShGsXmt7indkg&hl=en&sa=X&ved=2ahUKEwjexofi9rKHAxXrQTABHQL0AGYQ6AF6BAgdEAM
 
 [dantocmiennui.vn]
 match = -125.0%%
@@ -132,9 +132,9 @@ title = Dự báo thời tiết TP.HCM ngày 16/7: Mưa dông về chiều ...
 url = https://vtcnews.vn/du-bao-thoi-tiet-tp-hcm-ngay-16-7-mua-dong-ve-chieu-nhiet-do-giam-ar883459.html
 
 [vietstock.vn]
-match = -212.5%%
-title = Phân tích kỹ thuật phiên chiều 19/07: Tâm lý bi quan dần ...
-url = https://vietstock.vn/2024/07/phan-tich-ky-thuat-phien-chieu-1907-tam-ly-bi-quan-dan-hien-huu-585-1209089.htm
+match = -218.8%%
+title = Phân tích kỹ thuật phiên chiều 16/07: Tâm lý lạc quan quay ...
+url = https://vietstock.vn/2024/07/phan-tich-ky-thuat-phien-chieu-1607-tam-ly-lac-quan-quay-tro-lai-585-1207761.htm
 
 [www.dcine.vn]
 match = 20.0%%
