--- a/images/ruot-nem-korea-9f-14-19/config.ini
+++ b/images/ruot-nem-korea-9f-14-19/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-14-19.html
 lastopen = 2024-06-10 00:27:45
 
 [search]
-lastsearch = 2024-07-19 17:15:08
+lastsearch = 2024-07-19 17:45:48
 
 [en.wikipedia.org]
 match = 0.0%%
@@ -112,9 +112,9 @@ title =
 url = https://www.koreanclass101.com/korean-age/
 
 [www.tiktok.com]
-match = -13.0%%
-title = What Hair Dye to Use for King Von
-url = https://www.tiktok.com/discover/what-hair-dye-to-use-for-king-von
+match = -69.6%%
+title = acho que esse meu primo é gay 🤨🏳️‍🌈 - #minerva - #cblol
+url = https://www.tiktok.com/@gustavominerva/video/7390402879112187178
 
 [www.unikorea.go.kr]
 match = -113.0%%
