CI images update

--- a/images/man-tu-bung-18/config.ini
+++ b/images/man-tu-bung-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-tu-bung-18.html
 lastopen = 2024-06-10 00:37:41
 
 [search]
-lastsearch = 2024-07-19 06:28:23
+lastsearch = 2024-07-19 18:16:43
 
 [shopee.vn]
 match = -171.4%%
@@ -27,9 +27,9 @@ title = Hướng dẫn phân biệt màn tự bung cao cấp và màn nhái ...
 url = https://manthutrang.com/blogs/news/huong-dan-phan-biet-man-tu-bung-cao-cap-va-man-nhai-gia-re
 
 [www.mantubung.com]
-match = -228.6%%
-title = Mùng Chụp | Màn Tự Bung Thông Minh Chống Muỗi | Khuyến ...
-url = https://www.mantubung.com/
+match = -150.0%%
+title = Mùng Chụp Tự Bung Người Lớn chống muỗi BẢO BẢO
+url = https://www.mantubung.com/mung-chup-tu-bung.html
 
 [www.lazada.vn]
 match = -185.7%%
