--- a/images/tui-warmdream-16/config.ini
+++ b/images/tui-warmdream-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-warmdream-16.html
 lastopen = 2024-06-10 01:14:08
 
 [search]
-lastsearch = 2024-07-19 15:35:04
+lastsearch = 2024-07-19 18:18:18
 
 [www.tiktok.com]
 match = 0.0%%
@@ -212,12 +212,17 @@ title = līdzjūtības pantiņi - More - cheaptheatreticket.com
 url = https://cheaptheatreticket.com/blogs/jojnijro-94/
 
 [mechanicaldesign-job.com]
-match = -206.2%%
-title = dior watches women - christian dior watches swiss made ...
-url = https://mechanicaldesign-job.com/products/ahfwgrjm-183//
+match = -31.2%%
+title = checked bag policy delta
+url = https://mechanicaldesign-job.com/products/tqqvnqki-195/
 
 [www.veryberryfrozenyogurt.com]
 match = -262.5%%
 title = tucson rolex - rolex watches tucson az - veryberryfrozenyogurt.com
 url = https://www.veryberryfrozenyogurt.com/blogs/azfychit-1/
+
+[www.onlineforexcommunity.com]
+match = -162.5%%
+title = chanel mens underwear - chanel sweatsuit men's ...
+url = https://www.onlineforexcommunity.com/products/rdcttnve-160/
 
