--- a/images/bo-chan-ga-gam-pyeoda-skysilk/config.ini
+++ b/images/bo-chan-ga-gam-pyeoda-skysilk/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-chan-ga-gam-pyeoda-skysilk.html
 lastopen = 2024-06-10 01:22:44
 
 [search]
-lastsearch = 2024-07-19 14:33:27
+lastsearch = 2024-07-19 18:14:32
 
 [demxanh.com]
 match = 13.8%%
@@ -47,9 +47,9 @@ title = Điệp Xuân Bộ chăn ga gấm Pyeoda SkySilk
 url = https://www.diepxuan.com/bo-chan-ga-gam-pyeoda-skysilk.html
 
 [www.facebook.com]
-match = 20.7%%
-title = Chăn Ga Gối Đệm Singapore | Hanoi
-url = https://www.facebook.com/changagoisingapore/
+match = 28.0%%
+title = Chăn Ga Gối Đệm Singapore
+url = https://www.facebook.com/changagoisingapore/?locale=uk_UA
 
 [changagoidemdep.vn]
 match = 3.4%%
