--- a/images/chieu-lac-d2-16/config.ini
+++ b/images/chieu-lac-d2-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-lac-d2-16.html
 lastopen = 2024-06-06 16:54:08
 
 [search]
-lastsearch = 2024-07-19 16:51:07
+lastsearch = 2024-07-19 18:14:54
 
 [vinatools.com]
-match = -206.7%%
-title = Kéo cắt thép tấm BESSEY D216-280, thẳng bo trái - phải
-url = https://vinatools.com/keo-cat-ton-d216-sbsk/
+match = -140.0%%
+title = Kéo cắt tôn dày 1.0mm kiểu dáng cổ điển Bessey
+url = https://vinatools.com/keo-cat-ton-d-216-116/
 
 [www.vietnamairport.vn]
 match = -93.3%%
@@ -49,7 +49,7 @@ url = https://vnexpress.net/cowon-d2-gia-nhap-cau-lac-bo-16-gb-1500501.html
 [www.facebook.com]
 match = 0.0%%
 title = Black Kingdom - D2
-url = https://www.facebook.com/photo.php?fbid=925380399591113&id=100063574839369&set=a.647966903999132&locale=ml_IN
+url = https://www.facebook.com/photo.php?fbid=925380399591113&id=100063574839369&set=a.647966903999132&locale=hi_IN
 
 [banhang.shopee.vn]
 match = -66.7%%
@@ -237,7 +237,7 @@ title = Chiếu lạc - Hưng Liên
 url = http://hunglien.net/san-pham/chieu-lac/
 
 [www.axel-gl.com]
-match = -213.3%%
-title = 63-5174-24 HARWIN D2 2.54mm Pitch dọc 16 cách, thông ...
+match = -260.0%%
+title = 63-5174-24 HARWIN D2 2.54mm Pitch dọc 16 cách, thông qua lỗ ...
 url = https://www.axel-gl.com/vi-vn/asone/d/63-5174-24/
 
