--- a/images/ruot-nem-korea-9f-15-19/config.ini
+++ b/images/ruot-nem-korea-9f-15-19/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-15-19.html
 lastopen = 2024-06-10 00:18:43
 
 [search]
-lastsearch = 2024-07-19 11:38:23
+lastsearch = 2024-07-19 18:19:01
 
 [www.diepxuan.com]
 match = -60.9%%
@@ -382,9 +382,9 @@ title = The Banner Fall 2018 by Seoul Foreign School
 url = https://issuu.com/sfspublications/docs/banner_2018fall_dp
 
 [files.eric.ed.gov]
-match = -147.8%%
-title = Analysis of Student-Teacher Interactive Writing in the Learning ...
-url = https://files.eric.ed.gov/fulltext/ED252097.pdf
+match = -162.5%%
+title = Catalogs
+url = https://files.eric.ed.gov/fulltext/ED112652.pdf
 
 [www.gamedeveloper.com]
 match = -425.0%%
