--- a/images/chieu-lac-soc-18/config.ini
+++ b/images/chieu-lac-soc-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-18.html
 lastopen = 2024-06-06 16:53:55
 
 [search]
-lastsearch = 2024-07-19 17:37:23
+lastsearch = 2024-07-19 18:31:30
 
 [scholar.google.com]
 match = -43.8%%
@@ -119,7 +119,7 @@ url = https://www.youtube.com/watch?v=hteDrQdI8UA
 [books.google.com]
 match = -175.0%%
 title = Văn hóa, nguyệt san: tập-san nghiên-cứu và phổ-thông
-url = https://books.google.com/books?id=3oclAAAAMAAJ&pg=PA220&lpg=PA220&dq=chieu+lac+soc+18&source=bl&ots=CqzJG2Kp7i&sig=ACfU3U0U7qJqhnrbScOioV4Gw8o6es8xLg&hl=en&sa=X&ved=2ahUKEwitrMC527GHAxUAwBQJHQ_TCVAQ6AF6BAgbEAM
+url = https://books.google.com/books?id=3oclAAAAMAAJ&pg=RA1-PA110&lpg=RA1-PA110&dq=chieu+lac+soc+18&source=bl&ots=CqzJG6Osah&sig=ACfU3U2YrWy5n4BjnraNSyCGb39MwEFqSQ&hl=en&sa=X&ved=2ahUKEwijqKPLgLOHAxWbTDABHfTfBZYQ6AF6BAgiEAM
 
 [tuanhiep.com.vn]
 match = -56.2%%
@@ -222,9 +222,9 @@ title = Chuyển phát nhanh Phương Trang ...
 url = https://futaexpress.vn/chi-nhanh
 
 [baolongan.vn]
-match = -125.0%%
-title = Một ngày ở làng dệt chiếu lác Long Cang, Cần Đước
-url = https://baolongan.vn/mot-ngay-o-lang-det-chieu-lac-long-cang-can-duoc-a5230.html
+match = -31.2%%
+title = Giữ nghề dệt chiếu Long Cang
+url = https://baolongan.vn/giu-nghe-det-chieu-long-cang-a169502.html
 
 [baothuathienhue.vn]
 match = -200.0%%
