--- a/images/ruot-nem-korea-9f-18/config.ini
+++ b/images/ruot-nem-korea-9f-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-18.html
 lastopen = 2024-06-10 00:54:35
 
 [search]
-lastsearch = 2024-07-19 17:46:18
+lastsearch = 2024-07-19 18:33:23
 
 [en.wikipedia.org]
 match = 15.0%%
@@ -87,9 +87,9 @@ title = Trump Selects Bitcoin-Owning Ohio Sen. JD Vance as Vice ...
 url = https://cryptonews.com/news/trump-selects-bitcoin-owning-ohio-sen-jd-vance-as-vice-presidential-candidate.htm
 
 [www.thespike.gg]
-match = -135.0%%
-title = SLT vs IAM | VCL - Korea Split 2 | VALORANT Esports Match
-url = https://www.thespike.gg/br/match/slt-iam/120060
+match = -80.0%%
+title = SLT vs Nongshim RedForce | VCL - Korea Split 2
+url = https://www.thespike.gg/br/match/slt-nongshim-redforce/120062
 
 [br.ign.com]
 match = -125.0%%
