--- a/images/tham-nhung-bali-180x230/config.ini
+++ b/images/tham-nhung-bali-180x230/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-nhung-bali-180x230.html
 lastopen = 2024-06-07 01:58:55
 
 [search]
-lastsearch = 2024-07-19 15:24:32
+lastsearch = 2024-07-19 18:27:51
 
 [demxanh.com]
 match = 0.0%%
@@ -17,8 +17,8 @@ title = Thảm Phủ Sofa Trang Trí Thổ Cẩm Hoa Văn Đỏ Hồng
 url = https://www.noithatpassion.com/products/tham-phu-sofa-trang-tri-tho-cam-hoa-van-do-hong
 
 [vi.wikipedia.org]
-match = -87.0%%
-title = Iosif Vissarionovich Stalin – Wikipedia tiếng Việt
+match = -8.7%%
+title = Iosif Vissarionovich Stalin
 url = https://vi.wikipedia.org/wiki/Iosif_Vissarionovich_Stalin
 
 [sosanhgia.vn]
