--- a/images/bo-chan-ga-goi-mau-re-16/config.ini
+++ b/images/bo-chan-ga-goi-mau-re-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-mau-re-16.html
 lastopen = 2024-06-09 23:45:13
 
 [search]
-lastsearch = 2024-07-19 18:12:17
+lastsearch = 2024-07-19 18:32:49
 
 [changagoidemsonghong.com]
 match = 4.2%%
@@ -47,9 +47,9 @@ title = Chăn Ga Gối Đệm Nhập Hàng Tận Xưởng Giá Tốt Freeship
 url = https://cuahangchangagoidem.com/cua-hang-chan-ga-goi-dem/
 
 [tiki.vn]
-match = -33.3%%
-title = Chăn ga gối màu đen hàng chính hãng, giao nhanh
-url = https://tiki.vn/search?q=chăn ga gối màu đen
+match = 0.0%%
+title = Bộ chăn ga gối hàng chính hãng, giao nhanh
+url = https://tiki.vn/search?q=bộ chăn ga gối
 
 [manbinhminh.com]
 match = -41.7%%
