--- a/images/chieu-lac-gam-14/config.ini
+++ b/images/chieu-lac-gam-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-14.html
 lastopen = 2024-06-09 23:47:29
 
 [search]
-lastsearch = 2024-07-19 13:39:43
+lastsearch = 2024-07-19 18:24:57
 
 [www.diepxuan.com]
 match = 56.2%%
@@ -410,4 +410,9 @@ url = https://baolaocai.vn/lan-toa-phong-trao-luyen-tap-bong-da-o-bao-yen-post38
 match = 12.5%%
 title = Sở Y Tế Hà Giang
 url = https://ytehagiang.org.vn/
+
+[m.viettelstore.vn]
+match = -212.5%%
+title = iPhone 14 nặng bao nhiêu? Tiết lộ bất ngờ về trọng lượng ...
+url = https://m.viettelstore.vn/tin-tuc/iphone-14-nang-bao-nhieu
 
