--- a/images/man-ren-14/config.ini
+++ b/images/man-ren-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/man-ren-14.html
 lastopen = 2024-06-06 17:06:44
 
 [search]
-lastsearch = 2024-07-19 12:33:05
+lastsearch = 2024-07-19 18:29:49
 
 [www.youtube.com]
-match = -390.0%%
-title = Renren Is Love, Renren Is Life | 14 Days With You (Day 1)
-url = https://www.youtube.com/watch?v=dS5JtXqOR-I
+match = -420.0%%
+title = A Date With Ren? Don't Worry About It | 14 Days With You ...
+url = https://www.youtube.com/watch?v=pjfU1xhfUrg
 
 [www.sinimed.co.il]
 match = -370.0%%
@@ -17,9 +17,9 @@ title = Tung's Acupuncture points 33.13 (Ren shi), 33.14 (Di ...
 url = https://www.sinimed.co.il/en/acupuncture/en-33-13-33-14-33-15/
 
 [www.tumblr.com]
-match = -40.0%%
-title = Ren NSFW alphabet
-url = https://www.tumblr.com/14dayswithyou/692620485331238912/ren-nsfw-alphabet
+match = -70.0%%
+title = ren 14 days with you
+url = https://www.tumblr.com/tagged/ren 14 days with you
 
 [www.garagejournal.com]
 match = -200.0%%
@@ -27,9 +27,9 @@ title = Mystery Champion REN-14 Compressor Pump
 url = https://www.garagejournal.com/forum/threads/mystery-champion-ren-14-compressor-pump.386871/
 
 [en.wikipedia.org]
-match = 0.0%%
-title = 
-url = https://en.wikipedia.org/wiki/Ren_(philosophy)
+match = -120.0%%
+title = List of acupuncture points
+url = https://en.wikipedia.org/wiki/List_of_acupuncture_points
 
 [twitter.com]
 match = -430.0%%
@@ -97,9 +97,9 @@ title =
 url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC8733268/
 
 [www.tiktok.com]
-match = 0.0%%
-title = Ren from 14 Days
-url = https://www.tiktok.com/discover/ren-from-14-days
+match = -60.0%%
+title = Ren 14 Days Eith You
+url = https://www.tiktok.com/discover/ren-14-days-eith-you?lang=en
 
 [nordicanglers.com]
 match = -120.0%%
@@ -123,7 +123,7 @@ url = https://vndb.org/v36279
 
 [cutiesai.itch.io]
 match = -240.0%%
-title = 14 Days With You by cutiesai - Itch.io
+title = 14 Days With You by cutiesai - itch.io
 url = https://cutiesai.itch.io/14dayswithyou
 
 [www.koha.net]
