--- a/images/ruot-nem-korea-9f-15-19/config.ini
+++ b/images/ruot-nem-korea-9f-15-19/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-15-19.html
 lastopen = 2024-06-10 00:18:43
 
 [search]
-lastsearch = 2024-07-19 18:19:01
+lastsearch = 2024-07-19 18:44:27
 
 [www.diepxuan.com]
 match = -60.9%%
@@ -22,9 +22,9 @@ title = notice on public participation & accessibility
 url = https://www.southpasadenaca.gov/files/assets/public/v/1/police/documents/agenda-packet-combined-092.pdf
 
 [en.wikipedia.org]
-match = -58.3%%
-title = Nam Joo-hyuk
-url = https://en.wikipedia.org/wiki/Nam_Joo-hyuk
+match = 0.0%%
+title = 
+url = https://en.wikipedia.org/wiki/Korea_Media_Rating_Board
 
 [www.facebook.com]
 match = -108.7%%
@@ -565,4 +565,9 @@ url = https://remywiki.com/AC_SDVX_EG
 match = -87.0%%
 title = The Team Behind Hoexter's Turn to Italy for Il Totano
 url = https://www.nytimes.com/2024/05/14/dining/nyc-restaurant-news.html
+
+[panochada.com]
+match = -39.1%%
+title = Northern Limit Line, South Korea - Panochada
+url = https://panochada.com/2020/08/27/northern-limit-line-south-korea/
 
