CI images update

--- a/images/man-in-hoa-dep-18/config.ini
+++ b/images/man-in-hoa-dep-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-18.html
 lastopen = 2024-06-10 01:12:42
 
 [search]
-lastsearch = 2024-07-19 09:08:47
+lastsearch = 2024-07-19 19:29:34
 
 [idfpr.illinois.gov]
 match = -170.6%%
@@ -12,14 +12,14 @@ title = Rights and Responsibilities of Association Board Members
 url = https://idfpr.illinois.gov/content/dam/soi/en/web/idfpr/ccico/pdfs/rights-and-responsibilities-of-association-board-members.pdf
 
 [www.reddit.com]
-match = -170.6%%
-title = I Paid My HOA Fine With 38000 Coins : r/CleetusMcFarland
-url = https://www.reddit.com/r/CleetusMcFarland/comments/128tzvx/i_paid_my_hoa_fine_with_38000_coins/
+match = -35.3%%
+title = Can HOA come onto my property?
+url = https://www.reddit.com/r/HOA/comments/xqmjl8/can_hoa_come_onto_my_property/
 
 [www.quora.com]
-match = -200.0%%
-title = If I buy a house, can an HOA really tell me that my friend ...
-url = https://www.quora.com/If-I-buy-a-house-can-an-HOA-really-tell-me-that-my-friend-can-t-live-with-me-because-we-re-not-blood-related
+match = -194.1%%
+title = If you live in a neighborhood with a HOA can they keep out ...
+url = https://www.quora.com/If-you-live-in-a-neighborhood-with-a-HOA-can-they-keep-out-a-resident-if-they-are-not-listed-on-the-deed
 
 [lauragoodsonart.com]
 match = 47.1%%
@@ -455,4 +455,9 @@ url = https://condomanagement.com/can-you-enact-limits-on-renting-in-an-illinois
 match = 0.0%%
 title = 
 url = https://www.freep.com/story/news/local/michigan/2024/06/24/hoa-michigan-rules-regulations-laws/74149286007/
+
+[winknews.com]
+match = -5.9%%
+title = Changes coming to HOA rules
+url = https://winknews.com/2024/06/06/changes-coming-to-hoa-rules/
 
