--- a/images/tui-warmdream-18/config.ini
+++ b/images/tui-warmdream-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-warmdream-18.html
 lastopen = 2024-06-10 00:27:15
 
 [search]
-lastsearch = 2024-07-19 13:45:30
+lastsearch = 2024-07-19 19:22:27
 
 [www.walmart.com]
 match = -162.5%%
@@ -12,9 +12,9 @@ title = Zury Natural Dream Multi Yaky 18" 20" 22", SOM RT BURG
 url = https://www.walmart.com/ip/Zury-Natural-Dream-Multi-Yaky-18-20-22-SOM-RT-BURG/652131534
 
 [www.tiktok.com]
-match = -6.2%%
-title = Dvorak Genshin Bpc
-url = https://www.tiktok.com/discover/dvorak-genshin-bpc?lang=en
+match = -75.0%%
+title = As Warm As Fire Final Episode Ending
+url = https://www.tiktok.com/discover/as-warm-as-fire-final-episode-ending
 
 [www.diepxuan.com]
 match = -162.5%%
@@ -62,8 +62,8 @@ title = [ F4 THAILAND ] Warm Dream - EP.6 - NovelToon
 url = https://noveltoon.vn/vi/watch/1965107/7048058
 
 [www.instagram.com]
-match = -193.8%%
-title = Meliá Hotels & Resorts | It's time to enjoy a warm dream ...
+match = -237.5%%
+title = Meliá Hotels & Resorts | It's time to enjoy a warm dream resort ...
 url = https://www.instagram.com/meliahtlresorts/p/CsQkNaANnaw/
 
 [demxanh.com]
@@ -180,4 +180,14 @@ url = https://m.paternitylabcenter.com/products/ynabqsez-168/
 match = -100.0%%
 title = Results of search for 'ccl=pl:"Beijing
 url = https://opac.ppanpk.gov.my/cgi-bin/koha/opac-search.pl?q=ccl=pl:"Beijing :  " and (( (allrecords,AlwaysMatches='') and (not-onloan-count,st-numeric >= 1) and (lost,st-numeric=0) ))&offset=80&sort_by=relevance_dsc&count=20
+
+[mechanicaldesign-job.com]
+match = -287.5%%
+title = distilled malt vinegar vs malt vinegar - More - mechanicaldesign-job ...
+url = https://mechanicaldesign-job.com/blogs/tkzjoeuq-115//
+
+[veryberryfrozenyogurt.com]
+match = -218.8%%
+title = boots coco chanel 50ml - chanel coco mademoiselle boots ...
+url = https://veryberryfrozenyogurt.com/products/iqgwwrrm-200/
 
