--- a/images/vo-goi-ke-mau/config.ini
+++ b/images/vo-goi-ke-mau/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-goi-ke-mau.html
 lastopen = 2024-06-10 01:36:08
 
 [search]
-lastsearch = 2024-07-19 09:01:24
+lastsearch = 2024-07-19 19:23:07
 
 [ninhouse.vn]
 match = -146.2%%
@@ -84,7 +84,7 @@ url = https://en.bab.la/dictionary/vietnamese-english/
 [shopee.vn]
 match = -184.6%%
 title = vỏ ruột gối ôm giá tốt Tháng 7, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=vỏ ruột gối ôm&urlold=vo-goi-om-long-ruot-mau-mon-xanh/8494718674863723139/343220106741734172/ 
+url = https://shopee.vn/search?keyword=vỏ ruột gối ôm&urlold=vo-goi-om-long-ruot-mau-mon-xanh/8494718674863723139/343220106741734172/
 
 [songhong.info]
 match = -161.5%%
@@ -135,4 +135,19 @@ url = https://spacet.vn/shop/vo-goi-nam-lua-tencel-60s-tron-mau-nau-go-7596
 match = -30.8%%
 title = Mail - Gmail - Google
 url = https://mail.google.com/mail/u/0/?ogbl
+
+[lojban.org]
+match = -15.4%%
+title = Lojban Word Glossary
+url = https://lojban.org/publications/cll/cll_v1.1_xhtml-section-chunks/go01.html
+
+[www.uscis.gov]
+match = -46.2%%
+title = Chào Mừng Quý Vị Đến Hoa Kỳ
+url = https://www.uscis.gov/sites/default/files/document/guides/M-618_v.pdf
+
+[isonicinternational.com]
+match = -10.0%%
+title = Index of /
+url = http://isonicinternational.com/
 
