--- a/images/chieu-truc-den-khong-vien-18/config.ini
+++ b/images/chieu-truc-den-khong-vien-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-den-khong-vien-18.html
 lastopen = 2024-06-07 00:19:24
 
 [search]
-lastsearch = 2024-07-19 14:44:49
+lastsearch = 2024-07-19 19:30:40
 
 [chieutrelanlan.com]
 match = 0.0%%
@@ -32,9 +32,9 @@ title = Chiếu Trúc cao cấp hạt Đen - Hà Nội
 url = https://demxanh.com/chieu-truc-den.html
 
 [shopee.vn]
-match = -10.7%%
-title = Chiếu trúc - Giá Tốt, Miễn Phí Vận Chuyển, Đủ Loại
-url = https://shopee.vn/list/chiếu/trúc
+match = -25.0%%
+title = Chiếu trúc 1m2 - Giá Tốt, Miễn Phí Vận Chuyển, Đủ Loại
+url = https://shopee.vn/list/chiếu/trúc/1m2
 
 [tongkhonem.com]
 match = 57.7%%
@@ -92,9 +92,9 @@ title = Tìm hiểu về quy trình để tạo nên sản phẩm chiếu trúc 
 url = https://chieutrucxinh.weebly.com/chia-se/category/mua-chi7871u-truacutec
 
 [h5.lazada.vn]
-match = 42.9%%
-title = Chiếu trúc 1,6*2m hạt nâu không viền
-url = https://h5.lazada.vn/products/chieu-truc-162m-hat-nau-khong-vien-i473062569.html
+match = -21.4%%
+title = chiếu tre 1,4*1,9m hạt vàng không viền hàng Việt Nam ...
+url = https://h5.lazada.vn/products/chieu-truc-chieu-tre-1419m-hat-vang-khong-vien-hang-viet-nam-sieu-re-i277132020.html
 
 [chieutrucchieutre.ete.vn]
 match = 32.1%%
