--- a/images/ga-chun-dreamland-150x190-ct/config.ini
+++ b/images/ga-chun-dreamland-150x190-ct/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ga-chun-dreamland-150x190-ct.html
 lastopen = 2024-06-07 00:24:00
 
 [search]
-lastsearch = 2024-07-19 12:36:29
+lastsearch = 2024-07-19 19:27:32
 
 [www.diepxuan.com]
 match = 0.0%%
-title = Chiếu nhựa Thái Bình 90x190 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-nhua-thai-binh-90x190.html
+title = Bộ ga chun chần MC20208 180x200 - Điệp Xuân
+url = https://www.diepxuan.com/bo-ga-chun-chan-mc20208-180x200.html
 
 [www.qcyc.ca]
 match = -53.6%%
@@ -37,9 +37,9 @@ title = Steve Maturo, Agoura Hills Real Estate Expert -
 url = https://stevematuro.com/show.aspx?url=https://xn--d1abd1a2c.xn--p1ai/6273594duocaimengnet4fe43y
 
 [m.facebook.com]
-match = -78.6%%
-title = Hidden Gem @blossomsnaugyct | By Mayor Pete Hess | The ...
-url = https://m.facebook.com/mayorpetehess/videos/hidden-gem-blossomsnaugyct/762508898099211/
+match = -39.3%%
+title = NuCanoe Owners Club | Looking to sell my pursuit
+url = https://m.facebook.com/groups/NuCanoeFans/posts/3738085363103309/
 
 [www.facebook.com]
 match = -39.3%%
@@ -75,4 +75,14 @@ url = https://www.instagram.com/p/C2lny5or_NA/
 match = -21.1%%
 title = Điệp Xuân Trang Chủ
 url = https://diepxuan.com/
+
+[newenglandsnarrowroad.com]
+match = -350.0%%
+title = sizing
+url = https://newenglandsnarrowroad.com/tag/sizing/
+
+[www.lacecarriage.com]
+match = -257.1%%
+title = Gallery
+url = http://www.lacecarriage.com/gallery2.htm
 
