--- a/images/ga-ni-long-18/config.ini
+++ b/images/ga-ni-long-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-18.html
 lastopen = 2024-06-09 23:39:01
 
 [search]
-lastsearch = 2024-07-19 09:07:13
+lastsearch = 2024-07-19 19:29:00
 
 [www.zillow.com]
 match = -69.2%%
@@ -47,9 +47,9 @@ title = 18 Long St, Newnan, GA 30263
 url = https://www.redfin.com/GA/Newnan/18-Long-St-30263/home/23481920
 
 [en.wikipedia.org]
-match = -42.9%%
-title = Gallium
-url = https://en.wikipedia.org/wiki/Gallium
+match = 0.0%%
+title = 
+url = https://en.wikipedia.org/wiki/4DX
 
 [www.youtube.com]
 match = -276.9%%
