--- a/images/nem-sieu-nhe-9f-15/config.ini
+++ b/images/nem-sieu-nhe-9f-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-15.html
 lastopen = 2024-06-10 00:49:22
 
 [search]
-lastsearch = 2024-07-19 15:20:36
+lastsearch = 2024-07-19 19:25:34
 
 [www.lazada.vn]
 match = -94.4%%
@@ -12,9 +12,9 @@ title = Nệm Siêu Nhẹ Giá Tốt T03/2024 | Mua tại Lazada.vn
 url = https://www.lazada.vn/tag/nem-sieu-nhe/
 
 [m.facebook.com]
-match = -72.2%%
-title = Nem cua bể nhà em bán siêu ngon luôn mn nha
-url = https://m.facebook.com/groups/213134222458659/posts/1917229278715803/
+match = -100.0%%
+title = HỆ THỐNG SIÊU THỊ NỆM HÀNG ĐẦU VIỆT NAM TỔNG ...
+url = https://m.facebook.com/media/set/?vanity=vuanem.vn&set=a.693142637496508
 
 [www.instagram.com]
 match = -50.0%%
@@ -27,9 +27,9 @@ title = Bảng giá nệm Vạn Thành khuyến mãi mới nhất 2024
 url = https://thegioinem.com/bang-gia-nem-van-thanh-moi.html
 
 [cotienfoods.vn]
-match = -72.2%%
-title = Khi nào nem chua chín? Cách nhận biết ...
-url = https://cotienfoods.vn/blogs/an-ngon/khi-nao-nem-chua-chin
+match = -27.8%%
+title = Cách bảo quản nem chua tại nhà
+url = https://cotienfoods.vn/blogs/an-ngon/cach-bao-quan-nem-chua
 
 [www.facebook.com]
 match = -150.0%%
