CI images update

--- a/images/chieu-gap-dai-loan-18/config.ini
+++ b/images/chieu-gap-dai-loan-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-18.html
 lastopen = 2024-06-09 22:42:55
 
 [search]
-lastsearch = 2024-07-19 07:56:56
+lastsearch = 2024-07-19 19:56:55
 
 [tiki.vn]
 match = -47.6%%
@@ -17,9 +17,9 @@ title = Sau 4 ngày công chiếu tại Đài Loan,... - CGV Cinemas ...
 url = https://www.facebook.com/cgvcinemavietnam/posts/sau-4-ngày-công-chiếu-tại-đài-loan-thanh-xuân-18x2-lữ-trình-hướng-về-em-đứng-top/844928247673947/
 
 [www.roc-taiwan.org]
-match = -42.9%%
-title = Thủ tục cấp đổi hộ chiếu cho người Đài Loan
-url = https://www.roc-taiwan.org/vn_vi/post/62.html
+match = -128.6%%
+title = Thông tin lãnh sự - Văn phòng Kinh tế và Văn hóa Đài Bắc ...
+url = https://www.roc-taiwan.org/vn_vi/cat/47.html
 
 [www.tiktok.com]
 match = -19.0%%
@@ -43,8 +43,8 @@ url = https://vi.wikipedia.org/wiki/Địa_lý_Đài_Loan
 
 [m.facebook.com]
 match = -90.5%%
-title = Lotte Cinema - THANH XUÂN 18x2: LỮ TRÌNH HƯỚNG ...
-url = https://m.facebook.com/story.php/?story_fbid=807781184716598&id=100064541715866
+title = Sau 4 ngày công chiếu tại Đài Loan, Thanh Xuân 18x2: Lữ ...
+url = https://m.facebook.com/cgvcinemavietnam/photos/sau-4-ngày-công-chiếu-tại-đài-loan-thanh-xuân-18x2-lữ-trình-hướng-về-em-đứng-top/844924327674339/
 
 [phimmoichillt.net]
 match = -123.8%%
@@ -68,8 +68,8 @@ url = https://thanhnien.vn/hua-quang-han-ghi-diem-trong-phim-dai-loan-co-doanh-t
 
 [www.youtube.com]
 match = -128.6%%
-title = TIN TỔNG HỢP 18/4/2023: G-7 ra thông cáo chung ủng hộ ...
-url = https://www.youtube.com/watch?v=TSXqxuH8ehM
+title = Lồng Tiếng | CHỊU THUA TRƯỚC EM - Tập 18 | Trọn Bộ Phim ...
+url = https://www.youtube.com/watch?v=-5kfc6oUOmU
 
 [zh.wikipedia.org]
 match = -9.5%%
@@ -87,9 +87,9 @@ title = Đài Loan (Trung Quốc) tiếp tục tìm kiếm 18 người mất tí
 url = https://nhandan.vn/dai-loan-trung-quoc-tiep-tuc-tim-kiem-18-nguoi-mat-tich-sau-dong-dat-post803249.html
 
 [www.diepxuan.com]
-match = 14.3%%
-title = Chiếu gấp Đài Loan 140x190 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-gap-dai-loan-140x190.html
+match = 19.0%%
+title = Chiếu gấp Đài Loan 180x200 - Điệp Xuân
+url = https://www.diepxuan.com/chieu-gap-dai-loan-180x200.html
 
 [znews.vn]
 match = -104.8%%
@@ -113,8 +113,8 @@ url = https://www.nguoi-viet.com/binh-luan/an-com-dai-loan-tho-ma-trung-cong/
 
 [trithucvn.co]
 match = -123.8%%
-title = Ông Trump nói Đài Loan phải trả tiền cho Mỹ để được bảo ...
-url = https://trithucvn.co/the-gioi/ong-trump-noi-dai-loan-phai-tra-tien-cho-my-de-duoc-bao-ve-khoi-trung-quoc.html
+title = Đài Loan và Nhật Bản hợp tác kêu gọi toàn cầu chống thu ...
+url = https://trithucvn.co/the-gioi/dai-loan-va-nhat-ban-hop-tac-keu-goi-toan-cau-chong-thu-hoach-noi-tang.html
 
 [www.vietnamplus.vn]
 match = -119.0%%
@@ -225,4 +225,14 @@ url = https://cau-ca.com/tw/taiwan/su-ao-kang
 match = -104.8%%
 title = Tại sao Cương lĩnh Đảng Cộng hòa 2024 không đề cập ...
 url = https://bacaytruc.com/index.php/19026-t-i-sao-c-ng-linh-d-ng-c-ng-hoa-2024-khong-d-c-p-d-n-dai-loan-tac-gi-china-review-news-agency-bien-d-ch-le-th-thanh-loan
+
+[vneconomy.vn]
+match = -114.3%%
+title = Số lượng triệu phú Đài Loan có thể tăng gấp đôi vào năm ...
+url = https://vneconomy.vn/so-luong-trieu-phu-dai-loan-co-the-tang-gap-doi-vao-nam-2028-nho-su-bung-no-ai.htm
+
+[www.vietjetair.com]
+match = 25.0%%
+title = Vé máy bay đi Taiwan
+url = https://www.vietjetair.com/vi/ve-may-bay/ve-may-bay-di-taiwan/
 
