CI images update

--- a/images/man-re-trang-16/config.ini
+++ b/images/man-re-trang-16/config.ini
@@ -4,11 +4,11 @@ url = https://www.diepxuan.com/man-re-trang-16.html
 lastopen = 2024-06-09 23:51:34
 
 [search]
-lastsearch = 2024-07-19 19:57:18
+lastsearch = 2024-07-19 20:20:22
 
 [www.gov.uk]
-match = 0.0%%
-title = 
+match = -200.0%%
+title = Visit the UK as a Standard Visitor: If you're under 18
 url = https://www.gov.uk/standard-visitor/if-youre-under-18
 
 [www.oltarsh.com]
@@ -32,9 +32,9 @@ title = Movie Information | Tickets | Showtimes |
 url = https://readingcinemas.com/
 
 [www.youtube.com]
-match = -100.0%%
-title = YouTube
-url = https://www.youtube.com/watch?v=_tpd4v1emkc
+match = -86.7%%
+title = 1 Corinthians 16:13 || Act Like Men
+url = https://www.youtube.com/watch?v=gkX5_aZPBXU
 
 [vietjack.com]
 match = -106.7%%
@@ -654,7 +654,7 @@ url = https://www.liverpoolfc.com/
 [www.bernzomatic.com]
 match = -166.7%%
 title = Để học tốt Tiếng Anh 6Giải toán lớp 6 tập 1 trang 16
-url = https://www.bernzomatic.com/appwwcBy/53637.csv
+url = https://www.bernzomatic.com/app8789085
 
 [www.imdb.com]
 match = -86.7%%
@@ -920,4 +920,19 @@ url = https://www.ntsb.gov/Pages/home.aspx
 match = -146.7%%
 title = Alaska's News Source | KTUU/KYES | Anchorage, AK
 url = https://www.alaskasnewssource.com/
+
+[www.hermes.com]
+match = -146.7%%
+title = The official Hermes online store | Hermès USA
+url = https://www.hermes.com/us/en/
+
+[www.fda.gov]
+match = -73.3%%
+title = U.S. Food and Drug Administration
+url = https://www.fda.gov/
+
+[pressofatlanticcity.com]
+match = -273.3%%
+title = Press of Atlantic City | News | Read breaking news for Atlantic ...
+url = https://pressofatlanticcity.com/
 
