--- a/images/bo-bon-mua-epm21069-180x200/config.ini
+++ b/images/bo-bon-mua-epm21069-180x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-epm21069-180x200.html
 lastopen = 2024-06-07 00:16:06
 
 [search]
-lastsearch = 2024-07-19 14:28:06
+lastsearch = 2024-07-19 20:19:54
 
 [everon.online]
 match = -7.4%%
@@ -37,14 +37,14 @@ title = Bộ chăn ga Everon ESB -22020
 url = https://everonhn.com.vn/bo-chan-ga-everon-esc-22020
 
 [everon.net.vn]
-match = -18.5%%
-title = Bộ Everon Epm-21069 - Chăn ga gối đệm Everon
-url = https://everon.net.vn/everon/2132/bo-everon-epm-21069
+match = 15.8%%
+title = Bộ Everon Epm-21060
+url = https://everon.net.vn/everon/2109/bo-everon-epm-21060
 
 [sieuthidemhanquoc.com.vn]
-match = 18.5%%
-title = Bộ chăn ga gối Everon EPM-21068
-url = https://sieuthidemhanquoc.com.vn/bo-chan-ga-goi-everon-epm-21068-1525
+match = 22.2%%
+title = Bộ chăn ga gối Everon EPM-21060
+url = https://sieuthidemhanquoc.com.vn/bo-chan-ga-goi-everon-epm-21060-1523
 
 [shopee.vn]
 match = -44.4%%
