--- a/images/chieu-gap-dai-loan-lua-15/config.ini
+++ b/images/chieu-gap-dai-loan-lua-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-lua-15.html
 lastopen = 2024-06-09 21:46:38
 
 [search]
-lastsearch = 2024-07-19 15:16:03
+lastsearch = 2024-07-19 20:22:12
 
 [shopee.vn]
 match = -8.0%%
@@ -77,9 +77,9 @@ title = Vé tàu MRT sân bay Taoyuan về Taipei
 url = https://divui.com/ve-tau-mrt-san-bay-taoyuan-ve-taipei
 
 [vn.taiwantoday.tw]
-match = -56.0%%
-title = 6 bộ phim Đài Loan được trình chiếu tại Liên hoan ...
-url = https://vn.taiwantoday.tw/news.php?unit=461&post=222153
+match = -66.7%%
+title = Taiwan Today
+url = https://vn.taiwantoday.tw/
 
 [vn.usembassy.gov]
 match = -24.0%%
