--- a/images/tham-ni-xop-mau-60/config.ini
+++ b/images/tham-ni-xop-mau-60/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-ni-xop-mau-60.html
 lastopen = 2024-06-06 16:51:51
 
 [search]
-lastsearch = 2024-07-19 18:33:35
+lastsearch = 2024-07-19 20:24:03
 
 [thamaulac.com.vn]
 match = -88.9%%
@@ -12,8 +12,8 @@ title = THẢM XỐP ÂU LẠC – Hàng Việt Nam chất lượng cao
 url = https://thamaulac.com.vn/
 
 [xoptraisan.info]
-match = -11.1%%
-title = Thảm xốp tranh giao thông 60×60
+match = -172.2%%
+title = Thảm xốp trải sàn 60x60 họa tiết tranh giao thông cao cấp ...
 url = https://xoptraisan.info/tham-xop-tranh-giao-thong-60x60
 
 [thamvinhthuan.com]
