--- a/images/tui-nem-korea-tuan-anh-14/config.ini
+++ b/images/tui-nem-korea-tuan-anh-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-nem-korea-tuan-anh-14.html
 lastopen = 2024-06-17 10:43:32
 
 [search]
-lastsearch = 2024-07-19 18:19:34
+lastsearch = 2024-07-19 20:19:09
 
 [suongtuyet.com]
-match = -4.0%%
-title = Nệm Gòn Ép Tuấn Anh Korea Plus Vải Gấm
-url = https://suongtuyet.com/nem-gon-ep-tuan-anh-korea-plus-vai-gam
+match = 16.0%%
+title = Nệm Bông Ép Tuấn Anh Korea Cotton
+url = https://suongtuyet.com/nem-bong-ep-tuan-anh-korea-kaki
 
 [tuananh.vn]
 match = 8.0%%
@@ -17,9 +17,9 @@ title = Đệm bông ép 3 mảnh Korea Kaki
 url = https://tuananh.vn/dem-bong-ep-korea-kaki-p112.html
 
 [demxanh.com]
-match = -72.0%%
-title = Đệm bông ép Tuấn Anh chính hãng giá tốt nhất thị trường!
-url = https://demxanh.com/dem-bong-ep-tuan-anh.html
+match = -48.0%%
+title = [Cập nhật] Bảng giá đệm bông ép Tuấn Anh khuyến mại ...
+url = https://demxanh.com/bang-gia-dem-bong-ep-tuan-anh-2021.html
 
 [shopee.vn]
 match = -40.0%%
