--- a/images/tham-nhung-bali-180x230/config.ini
+++ b/images/tham-nhung-bali-180x230/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-nhung-bali-180x230.html
 lastopen = 2024-06-07 01:58:55
 
 [search]
-lastsearch = 2024-07-19 19:22:56
+lastsearch = 2024-07-19 20:35:23
 
 [demxanh.com]
 match = 0.0%%
@@ -17,13 +17,13 @@ title = Thảm Phủ Sofa Trang Trí Thổ Cẩm Hoa Văn Đỏ Hồng
 url = https://www.noithatpassion.com/products/tham-phu-sofa-trang-tri-tho-cam-hoa-van-do-hong
 
 [vi.wikipedia.org]
-match = -8.7%%
-title = Iosif Vissarionovich Stalin
+match = -87.0%%
+title = Iosif Vissarionovich Stalin – Wikipedia tiếng Việt
 url = https://vi.wikipedia.org/wiki/Iosif_Vissarionovich_Stalin
 
 [sosanhgia.vn]
-match = -126.1%%
-title = Thảm chùi chân | Chất lượng, Gía rẻ hơn tại SoSanhGia.vn - Sắp ...
+match = -82.6%%
+title = Thảm chùi chân | Chất lượng, Gía rẻ hơn tại SoSanhGia.vn
 url = https://sosanhgia.vn/tham-chui-chan-3976/?sap-xep=gia-giam&trang=10
 
 [muathongminh.vn]
