--- a/images/chieu-truc-lieu-chau-16/config.ini
+++ b/images/chieu-truc-lieu-chau-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-lieu-chau-16.html
 lastopen = 2024-06-07 00:19:53
 
 [search]
-lastsearch = 2024-07-19 15:35:15
+lastsearch = 2024-07-19 20:35:58
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -22,9 +22,9 @@ title = Chia sẻ, kinh nghiệm sử dụng chiếu trúc, chiếu tre bền đ
 url = https://chieutrelanlan.com/tim-hieu-ve-chieu-truc-n20.html
 
 [demxanh.com]
-match = -30.4%%
-title = Mách bạn địa chỉ mua chiếu trúc tốt giá rẻ
-url = https://demxanh.com/mach-ban-dia-chi-mua-chieu-truc-tot-gia-re.html
+match = -87.0%%
+title = Tư vấn mua chiếu trúc thanh chính hãng, giá rẻ tại Đệm Xanh
+url = https://demxanh.com/tu-van-mua-chieu-truc-thanh-chinh-hang-gia-re-tai-dem-xanh.html
 
 [www.dienmayxanh.com]
 match = -73.9%%
@@ -32,9 +32,9 @@ title = 5 loại chiếu cực mát lưng cho mùa hè, được ưa chuộng ..
 url = https://www.dienmayxanh.com/kinh-nghiem-hay/5-loai-chieu-nam-mat-lim-lung-cho-mua-he-duoc-ua-1267470
 
 [chieutrucsaigon.com]
-match = 0.0%%
-title = BÁN CHIẾU TRÚC MẮT NHỎ 1M6 HƯƠNG TRÚC
-url = https://chieutrucsaigon.com/tin-tuc/tin-tuc-moi/ban-chieu-truc-mat-nho-1m6-huong-truc-70.html
+match = -30.4%%
+title = CHIẾU TRÚC CAO BẰNG 1M GIÁ RẺ LOẠI 1 TẠI TPHCM
+url = https://chieutrucsaigon.com/tin-tuc/tin-tuc-moi/chieu-truc-cao-bang-1m-gia-re-tai-tphcm-69.html
 
 [shopee.vn]
 match = -43.5%%
@@ -42,9 +42,9 @@ title = Chiếu tre - Giá Tốt, Miễn Phí Vận Chuyển, Đủ Loại
 url = https://shopee.vn/list/chiếu tre
 
 [www.youtube.com]
-match = -100.0%%
-title = Trọng tâm của Hội nghị thượng đỉnh Cộng đồng Chính trị ...
-url = https://www.youtube.com/watch?v=OmfkPKHMRP8
+match = -82.6%%
+title = Live bà liễu, thỏ đỏ , chậu 16, chậu thiết kế 0333491000
+url = https://www.youtube.com/watch?v=7RmfO3zUuYM
 
 [hcmcpv.org.vn]
 match = -91.3%%
