CI images update

--- a/images/chieu-cay-ht-15/config.ini
+++ b/images/chieu-cay-ht-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-ht-15.html
 lastopen = 2024-06-09 23:44:26
 
 [search]
-lastsearch = 2024-07-19 17:39:27
+lastsearch = 2024-07-19 20:45:58
 
 [www.diepxuan.com]
 match = -13.3%%
@@ -17,9 +17,9 @@ title = Đèn chiếu cỏ CD-15W - HTLIGHT
 url = https://www.htlight.vn/den-chieu-co-cd-15w-1.html
 
 [shopee.vn]
-match = -106.7%%
-title = chiếu tăm việt nam cao cấp kháng khuẩn H.T
-url = https://shopee.vn/chiếu-tăm-việt-nam-cao-cấp-kháng-khuẩn-H.T-i.68883759.1934498848
+match = -40.0%%
+title = chiếu trúc tăm HT cao cấp 2mx2.2m
+url = https://shopee.vn/chiếu-trúc-tăm-HT-cao-cấp-2mx2.2m-i.68883759.22469028239
 
 [daros.com.vn]
 match = -40.0%%
@@ -29,7 +29,7 @@ url = https://daros.com.vn/ht-15.html
 [htguitarcenter.vn]
 match = -26.7%%
 title = Guitar Trần Acoustic THD-15
-url = https://htguitarcenter.vn/san-pham/guitar-acoustic-thd-15/
+url = http://htguitarcenter.vn/san-pham/guitar-acoustic-thd-15/
 
 [www.htlightlevel.vn]
 match = -200.0%%
@@ -57,9 +57,9 @@ title = Giữa tuần Chùa Bát Nhã có chương trình phát gạo mà it ai 
 url = https://www.youtube.com/watch?v=ldw68uMGfCw
 
 [htlight.vn]
-match = -126.7%%
-title = Đèn chùm CH-621/15-HT - ĐÈN LED - HTLIGHT
-url = https://htlight.vn/den-chum-ch-62115-ht.html
+match = -26.7%%
+title = Đèn chiếu cỏ CD-15W - HTLIGHT
+url = http://htlight.vn/den-chieu-co-cd-15w-1.html
 
 [www.thietbidiendgp.vn]
 match = -6.7%%
