CI images update

--- a/images/chieu-dieu-hoa-cao-su-160x200/config.ini
+++ b/images/chieu-dieu-hoa-cao-su-160x200/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-cao-su-160x200.html
 lastopen = 2024-07-01 06:44:23
 
 [search]
-lastsearch = 2024-07-19 20:29:26
+lastsearch = 2024-07-19 21:18:05
 
 [demxanh.com]
-match = 17.2%%
-title = Chiếu điều hòa cao su non đa sắc xanh dương gấu
-url = https://demxanh.com/chieu-dieu-hoa-cao-su-non-da-sac-xanh-duong-gau.html
+match = 44.8%%
+title = Chiếu điều hòa cao su non màu hồng đậm
+url = https://demxanh.com/chieu-cao-su-non-mau-hong.html
 
 [tiki.vn]
 match = 20.7%%
