--- a/images/tham-ghe-1m7roi/config.ini
+++ b/images/tham-ghe-1m7roi/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-ghe-1m7roi.html
 lastopen = 2024-06-07 00:15:10
 
 [search]
-lastsearch = 2024-07-19 06:13:57
+lastsearch = 2024-07-19 21:15:09
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -22,9 +22,9 @@ title = tin tức - Trẻ dưới 10 tuổi không được ngồi ghế trướ
 url = https://voz.vn/t/tre-duoi-10-tuoi-khong-duoc-ngoi-ghe-truoc-o-to.805464/page-5
 
 [www.tiktok.com]
-match = -266.7%%
-title = Tui thấy cái đoạn nó chỉ uống sữa là nuôi nhàn nhất ấy! Giờ ...
-url = https://www.tiktok.com/@uttwins/video/7388515743945575688
+match = -246.7%%
+title = Cặp đôi Tiktoker Tín Nguyễn và Huỳnh Nhựt đến chung vui ...
+url = https://www.tiktok.com/@bimatvbiz/video/7242672033107135750
 
 [www.reddit.com]
 match = -120.0%%
