CI images update

--- a/images/chieu-lac-gam-14/config.ini
+++ b/images/chieu-lac-gam-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-14.html
 lastopen = 2024-06-09 23:47:29
 
 [search]
-lastsearch = 2024-07-19 21:21:37
+lastsearch = 2024-07-19 21:45:33
 
 [www.diepxuan.com]
 match = 56.2%%
@@ -27,9 +27,9 @@ title = Chiếu Lác: Nơi bán giá rẻ, uy tín, chất lượng nhất
 url = https://websosanh.vn/s/chiếu+lác.htm
 
 [www.youtube.com]
-match = -200.0%%
-title = Vietnamese Baguette Recipe - BÁNH MÌ VIỆT NAM - KNEAD ...
-url = https://www.youtube.com/watch?v=yzQ6rCK8pJw
+match = -212.5%%
+title = Tâm sự số 804 🌈 Tính cảnh cáo tiểu tam ai ngờ được tiểu tam ...
+url = https://www.youtube.com/watch?v=gAxoR-MNbkM
 
 [tuyensinh247.com]
 match = -225.0%%
