--- a/images/ruot-nem-warmdream-200x220x09/config.ini
+++ b/images/ruot-nem-warmdream-200x220x09/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-warmdream-200x220x09.html
 lastopen = 2024-06-11 20:11:03
 
 [search]
-lastsearch = 2024-07-19 21:19:23
+lastsearch = 2024-07-19 21:46:36
 
 [www.diepxuan.com]
 match = 3.4%%
@@ -17,9 +17,9 @@ title = 500K or 250K tone pot for GFS Dream 90???
 url = https://www.harmonycentral.com/forums/topic/1129469-500k-or-250k-tone-pot-for-gfs-dream-90/
 
 [www.home-barista.com]
-match = -55.2%%
-title = Londinium Vectis Spring Lever - Lance Hedrick Review
-url = https://www.home-barista.com/levers/londinium-vectis-spring-lever-lance-hedrick-review-t90220-30.html
+match = -6.9%%
+title = Lever for under $2k probably under $1.5k
+url = https://www.home-barista.com/advice/lever-for-under-2k-probably-under-1-5k-t65585.html
 
 [unofficialwarmoth.com]
 match = 0.0%%
@@ -34,7 +34,7 @@ url = https://www.steelsoldiers.com/threads/body-cap-side-window-rubber-seal-m10
 [www.amazon.com]
 match = -17.2%%
 title = Amazon.com: Customer Questions & Answers
-url = https://www.amazon.com/ask/questions/asin/B015HZXPWM
+url = https://www.amazon.com/ask/questions/Tx3LDB5W9WIDUEV/?
 
 [umgf.com]
 match = -48.3%%
