--- a/images/tam-trang-tri-ks-uc/config.ini
+++ b/images/tam-trang-tri-ks-uc/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tam-trang-tri-ks-uc.html
 lastopen = 2024-06-10 00:08:10
 
 [search]
-lastsearch = 2024-07-19 16:48:02
+lastsearch = 2024-07-19 21:52:31
 
 [demxanh.com]
 match = -131.6%%
@@ -275,4 +275,24 @@ url = https://www.sinkology.com/blog/fall-copper-tablescape-inpsiration/
 match = -126.3%%
 title = National Personnel Records Center (NPRC) VIP list, 2009
 url = https://www.governmentattic.org/3docs/NPRC_VIP_List_2009.pdf
+
+[sos.ga.gov]
+match = -78.9%%
+title = GEORGIA STATE BOARD of COSMETOLOGY AND ...
+url = https://sos.ga.gov/sites/default/files/2022-06/january_2022_minutes.pdf
+
+[www.worldbank.org]
+match = -131.6%%
+title = World Bank Listing of Ineligible Firms and Individuals
+url = https://www.worldbank.org/en/projects-operations/procurement/debarred-firms
+
+[publichealth.lacounty.gov]
+match = -173.7%%
+title = Department of Public Health Child ... - County of Los Angeles
+url = http://publichealth.lacounty.gov/cms/docs/CHDPAssessorDirectory.pdf
+
+[www.renaissanceriversidesaigon.com]
+match = -168.4%%
+title = Renaissance Riverside Hotel Saigon - Khách sạn 5 sao đẳng ...
+url = https://www.renaissanceriversidesaigon.com/
 
