--- a/images/vo-goi-ks-uc-50-70/config.ini
+++ b/images/vo-goi-ks-uc-50-70/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-goi-ks-uc-50-70.html
 lastopen = 2024-06-10 00:52:12
 
 [search]
-lastsearch = 2024-07-19 21:20:07
+lastsearch = 2024-07-19 21:44:58
 
 [www.lazada.vn]
 match = -55.6%%
@@ -285,4 +285,9 @@ url = https://sagarmala.gov.in/sites/default/files/MIV 2030 Report.pdf
 match = -33.3%%
 title = VỎ GỐI - Bộ chăn ga gối OZ Bedding
 url = https://bochangagoi.vn/vo-goi/
+
+[steamcommunity.com]
+match = -144.4%%
+title = Technical Question. WHAT IS VO VOLUME. :: Kenshi ...
+url = https://steamcommunity.com/app/233860/discussions/0/1318835718932155394/
 
