--- a/images/bo-ga-chun-chan-bon-mua-180x200-sh/config.ini
+++ b/images/bo-ga-chun-chan-bon-mua-180x200-sh/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-chun-chan-bon-mua-180x200-sh.html
 lastopen = 2024-06-07 00:25:35
 
 [search]
-lastsearch = 2024-07-19 18:12:28
+lastsearch = 2024-07-19 21:50:18
 
 [www.diepxuan.com]
 match = 10.0%%
@@ -13,8 +13,8 @@ url = https://www.diepxuan.com/everon/chan-ga-goi-everon.html
 
 [songhongonline.vn]
 match = 0.0%%
-title = Bộ sản phẩm SH_BC22 058
-url = https://songhongonline.vn/products/bo-chan-ga-goi-song-hong-sh-bc22-058
+title = Bộ sản phẩm SH_BC23 084
+url = https://songhongonline.vn/products/bo-san-pham-sh-bc23-084
 
 [everon.online]
 match = 50.0%%
@@ -33,8 +33,8 @@ url = https://shopee.vn/Bộ-ga-chun-chần-bốn-mùa-EVERON-180*200-ESTR-23054
 
 [www.everonvn.vn]
 match = -32.4%%
-title = Everon EPC-22045 | Bảng giá chi tiết bộ vỏ chăn ga gối ...
-url = https://www.everonvn.vn/chi-tiet/everon-epc22045.html
+title = Everon ESB-22051 | Bảng giá chi tiết bộ vỏ chăn ga gối ...
+url = https://www.everonvn.vn/chi-tiet/everon-esb22051.html
 
 [everonchinhhang.vn]
 match = 0.0%%
@@ -102,9 +102,9 @@ title = Bộ bọc Moder 03 (Ga chun chần)
 url = http://dreamland.vn/Bo-boc-Moder-03-(Ga-chun-chan)-i4155.html
 
 [www.everonqb.com]
-match = 67.7%%
-title = Bộ ga chun chần MC20201 180x200
-url = https://www.everonqb.com/bo-ga-chun-chan-mc20201-180x200.html
+match = 20.6%%
+title = Everon Quảng Bình Bộ chăn bốn mùa EPC21053 180x200
+url = https://www.everonqb.com/bo-chan-bon-mua-epc21053-180x200.html
 
 [changagoidemsonghong.online]
 match = -38.2%%
