--- a/images/chan-hoi-yuki/config.ini
+++ b/images/chan-hoi-yuki/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chan-hoi-yuki.html
 lastopen = 2024-06-10 00:16:36
 
 [search]
-lastsearch = 2024-07-19 21:31:25
+lastsearch = 2024-07-19 21:53:14
 
 [www.instagram.com]
-match = -30.8%%
-title = Yuki Chan (@yukichan_la)
-url = https://www.instagram.com/yukichan_la/?hl=en
+match = -238.5%%
+title = Hoi Chan (@hoichandraws) • Instagram photos and videos
+url = https://www.instagram.com/hoichandraws/?hl=en
 
 [www.linkedin.com]
 match = -192.3%%
@@ -62,9 +62,9 @@ title = Centre for Learning Enhancement And Research :: About
 url = https://www.cuhk.edu.hk/clear/about/people.html
 
 [en.wikipedia.org]
-match = -15.4%%
-title = The Midnight After
-url = https://en.wikipedia.org/wiki/The_Midnight_After
+match = -333.3%%
+title = 3X1
+url = https://en.wikipedia.org/wiki/3X1
 
 [nursing.hku.hk]
 match = -161.5%%
@@ -167,8 +167,8 @@ title = Service-Learning Capacity Enhancement in Hong Kong ...
 url = https://link.springer.com/book/10.1007/978-981-19-2437-8
 
 [www.thisiscolossal.com]
-match = -215.4%%
-title = Hoi Chan Translates Everyday Experiences into ...
+match = -300.0%%
+title = Hoi Chan Translates Everyday Experiences into ... - Colossal
 url = https://www.thisiscolossal.com/2024/03/hoi-chan-illustrations/
 
 [www.csus.edu]
@@ -190,4 +190,9 @@ url = https://www.deviantart.com/yuki-bushido/favourites/62985112/stuff-of-my-ch
 match = -215.4%%
 title = #duet with @Steven Chan Hoi Sing Yassss! 💃🏾🕺🏻#dance ...
 url = https://www.tiktok.com/@catbrows/video/7371964108607900958
+
+[sg.linkedin.com]
+match = -261.5%%
+title = Chan Hoi Yan - Singapore, Singapore | Professional Profile
+url = https://sg.linkedin.com/in/chan-hoi-yan-1662701aa
 
