--- a/images/chieu-cay-ht-tre-em/config.ini
+++ b/images/chieu-cay-ht-tre-em/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-cay-ht-tre-em.html
 lastopen = 2024-06-06 16:42:52
 
 [search]
-lastsearch = 2024-07-19 20:34:38
+lastsearch = 2024-07-19 21:45:10
 
 [shopee.vn]
-match = -36.8%%
-title = Chiếu trúc, chiếu tre HT nan nhỏ siêu mát
-url = https://shopee.vn/Chiếu-trúc-chiếu-tre-HT-nan-nhỏ-siêu-mát-i.141565512.24776596764
+match = -94.7%%
+title = chiếu trúc trẻ em giá tốt Tháng 7, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=chiếu trúc trẻ em
 
 [chieutrelanlan.com]
 match = -105.3%%
@@ -28,8 +28,8 @@ url = https://chieutrelinhchi.com/chieu-truc-1m6/chieu-truc-hat-nho-co-vien-mau-
 
 [www.youtube.com]
 match = -136.8%%
-title = Nhạc Thiếu Nhi Vui Nhộn Bé Đến Khu Vui Chơi Thiếu Nhi ...
-url = https://www.youtube.com/watch?v=1kfm-HBh_-g
+title = Cô Dạy Em Tập Thể Dục Buối Sáng - Nhạc Thiếu Nhi Sôi ...
+url = https://www.youtube.com/watch?v=6w-QNggXsJg
 
 [dochoihoangthu.com]
 match = -121.1%%
@@ -62,9 +62,9 @@ title = CHIẾU TRE , CHIẾU TRÚC MẮT NHỎ HẠT VÀNG DÒNG ...
 url = https://www.lazada.vn/products/chieu-tre-chieu-truc-mat-nho-hat-vang-dong-cao-cap-du-kich-thuoc-i251143269.html
 
 [tiki.vn]
-match = -136.8%%
-title = Đồ Chơi Trẻ Em Thông Minh HT SYS - Giúp Tư Duy, Sáng ...
-url = https://tiki.vn/do-choi-tre-em-ht-sys-bo-do-choi-lap-ghep-ky-su-bang-oc-nhua-tang-kem-khoan-do-choi-tre-em-thong-minh-ht-sys-giup-tu-duy-sang-tao-giao-duc-cho-be-hang-chinh-hang-p275587203.html?spid=275587206
+match = -126.3%%
+title = Mua Đồ Chơi Trẻ Em HT SYS - Bộ Đồ Chơi Lắp Ghép Kỹ ...
+url = https://tiki.vn/do-choi-tre-em-ht-sys-bo-do-choi-lap-ghep-ky-su-bang-oc-nhua-tang-kem-khoan-do-choi-tre-em-thong-minh-ht-sys-giup-tu-duy-sang-tao-giao-duc-cho-be-hang-chinh-hang-p275587203.html
 
 [khodem.vn]
 match = 31.6%%
