--- a/images/chieu-cay-moc-hoa16/config.ini
+++ b/images/chieu-cay-moc-hoa16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-moc-hoa16.html
 lastopen = 2024-06-09 22:42:25
 
 [search]
-lastsearch = 2024-07-19 15:16:27
+lastsearch = 2024-07-19 21:50:05
 
 [eva.vn]
 match = -131.6%%
@@ -72,9 +72,9 @@ title = Cây bóng nước có tác dụng gì?
 url = https://www.vinmec.com/vi/y-hoc-co-truyen/duoc-lieu/cay-bong-nuoc-co-tac-dung-gi/
 
 [www.youtube.com]
-match = -136.8%%
-title = SH.8771. Lần đầu tiên thấy cây Mộc Hương bonsai dáng đẹp ...
-url = https://www.youtube.com/watch?v=It91wsH0t3U
+match = -152.6%%
+title = Kỹ thuật chăm sóc mộc hương: Loài cây đắt đỏ không tưởng ...
+url = https://www.youtube.com/watch?v=sOj6zpeGxxU
 
 [trungquang.com]
 match = 0.0%%
