--- a/images/chieu-coi-viet-thai-18/config.ini
+++ b/images/chieu-coi-viet-thai-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-coi-viet-thai-18.html
 lastopen = 2024-06-06 16:54:00
 
 [search]
-lastsearch = 2024-07-19 16:45:09
+lastsearch = 2024-07-19 21:47:20
 
 [chieutruc.info]
 match = -63.6%%
@@ -12,9 +12,9 @@ title = Bảng giá chiếu Thái Lan dòng gấp vân gỗ cao cấp
 url = https://chieutruc.info/chieu-thai-lan-gap-van-go/
 
 [tiki.vn]
-match = -27.3%%
-title = Chiếu cói tatami hàng chính hãng, giao nhanh
-url = https://tiki.vn/search?q=chiếu cói tatami
+match = -36.4%%
+title = Chiếu cói nga sơn hàng chính hãng, giao nhanh
+url = https://tiki.vn/search?q=chiếu cói nga sơn
 
 [m.facebook.com]
 match = -13.6%%
