CI images update

--- a/images/chieu-lac-d2-10/config.ini
+++ b/images/chieu-lac-d2-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-10.html
 lastopen = 2024-06-21 02:07:26
 
 [search]
-lastsearch = 2024-07-19 21:14:24
+lastsearch = 2024-07-19 22:30:08
 
 [zhangbrickshop.com]
 match = -133.3
@@ -167,9 +167,9 @@ title = Báo sự cố
 url = https://capnuoctrungan.vn/Main/BaoSuCo/Create
 
 [www.instagram.com]
-match = -133.3%%
-title = CLAY - Cocktails & Cuisine (@clay_saigon)
-url = https://www.instagram.com/clay_saigon/?locale=怎么办假朝鲜HKICPA證書联系{威信+TG/飞机:@buth2788}qKoIm??????ѧ??ƾlFjDh&hl=ar
+match = -50.0%%
+title = Open app
+url = https://www.instagram.com/p/C0bphYSiGbB/
 
 [www.tiktok.com]
 match = -246.7%%
