CI images update

--- a/images/man-ren-16/config.ini
+++ b/images/man-ren-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-ren-16.html
 lastopen = 2024-06-07 00:52:49
 
 [search]
-lastsearch = 2024-07-19 17:12:42
+lastsearch = 2024-07-19 22:50:59
 
 [quizlet.com]
 match = -170.0%%
@@ -54,7 +54,7 @@ url = https://en.wikipedia.org/wiki/MC_Ren
 [books.google.com]
 match = -440.0%%
 title = The Monasteries of the Wadi 'n Natrûn: The history of the ...
-url = https://books.google.com/books?id=_mIPAQAAMAAJ&pg=PA206&lpg=PA206&dq=man+ren+16&source=bl&ots=Hlowzp-5BY&sig=ACfU3U1ExZIoqv0SzDDumiorUND_OHMXbw&hl=en&sa=X&ved=2ahUKEwjY9r326LKHAxUjTDABHRjWDMIQ6AF6BAgkEAM
+url = https://books.google.com/books?id=_mIPAQAAMAAJ&pg=PA206&lpg=PA206&dq=man+ren+16&source=bl&ots=HlowAh14EQ&sig=ACfU3U2Duuhs3h7UCW3yvNhJKgyXDvOz5Q&hl=en&sa=X&ved=2ahUKEwj-97vLurOHAxUEEFkFHSRwBjkQ6AF6BAggEAM
 
 [www.phillyvoice.com]
 match = 0.0%%
