--- a/images/bo-ga-goi-chun-xoa-2m-22/config.ini
+++ b/images/bo-ga-goi-chun-xoa-2m-22/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-xoa-2m-22.html
 lastopen = 2024-06-09 22:43:18
 
 [search]
-lastsearch = 2024-07-19 21:18:27
+lastsearch = 2024-07-19 22:51:22
 
 [www.diepxuan.com]
 match = -62.5%%
@@ -17,9 +17,9 @@ title = Bộ chăn ga gối Sông Hồng Basic 100%% cotton BC22 057
 url = https://changagoidemsonghong.com/chan-ga-goi-bc57
 
 [songhong.info]
-match = -33.3%%
-title = Nơi cung cấp chăn ga gối Sông Hồng Basic mã BC22
-url = https://songhong.info/chan-ga-goi-bc22
+match = -16.7%%
+title = Mẫu chăn ga gối 100%% cotton mã mầu BC22-067
+url = https://songhong.info/chan-ga-goi-bc67
 
 [hanvico.com.vn]
 match = 41.7%%
@@ -27,9 +27,9 @@ title = Bộ ga chun LIVING - LV22
 url = https://hanvico.com.vn/san-pham/bo-ga-chun-living-lv22/
 
 [www.everonvn.vn]
-match = -87.5%%
-title = Everon ESC-22020 | Bảng giá chi tiết bộ vỏ chăn ga gối ...
-url = https://www.everonvn.vn/chi-tiet/everon-esc22020.html
+match = 12.5%%
+title = Everon 2022 - Bộ chăn ga gối
+url = https://www.everonvn.vn/bo-suu-tap/everon-2022.html
 
 [songhongchinhhang.vn]
 match = 0.0%%
@@ -38,8 +38,8 @@ url = https://songhongchinhhang.vn/URBAN-COLLECTION/bo-urban-coleection-2022-202
 
 [everon.com.vn]
 match = -66.7%%
-title = Bộ Chăn Ga Everon ESB 22055 Bộ Sưu Tập Mới Nhất Năm ...
-url = https://everon.com.vn/bo-chan-ga-everon-esb-22055/
+title = Bộ Chăn Ga Everon EPM 22060 | Mới Nhất Năm 2022. Hotline
+url = https://everon.com.vn/bo-chan-ga-everon-epm-22060/
 
 [dailyeveron.vn]
 match = -66.7%%
