--- a/images/chieu-lac-soc-14/config.ini
+++ b/images/chieu-lac-soc-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-14.html
 lastopen = 2024-06-09 23:48:09
 
 [search]
-lastsearch = 2024-07-19 15:16:16
+lastsearch = 2024-07-19 22:47:33
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -390,4 +390,9 @@ url = http://lamdongtv.vn/tin-tuc-n23818/giet-nguoi-vi-mau-thuan-ca-nhan-nhan-14
 match = -175.0%%
 title = ƯU ĐÃI BAO LA - MUA HÀNG GIÁ TỐT (04/07 - 14/07/2024)
 url = https://satrafoods.com.vn/vn/khuyen-mai/uu-dai-bao-la-mua-hang-gia-tot-04-07-14-07-2024.html
+
+[m.viettelstore.vn]
+match = -193.8%%
+title = iPhone 14 bao nhiêu inch?Tất tần tật về kích thước màn ...
+url = https://m.viettelstore.vn/tin-tuc/iphone-14-bao-nhieu-inch
 
