--- a/images/chieu-truc-cong-ty-14/config.ini
+++ b/images/chieu-truc-cong-ty-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-truc-cong-ty-14.html
 lastopen = 2024-06-09 23:39:55
 
 [search]
-lastsearch = 2024-07-19 18:43:54
+lastsearch = 2024-07-19 22:49:53
 
 [chieutrucsaigon.com]
-match = 0.0%%
-title = CHIẾU TRÚC SẢN PHẨM ĐỘC ĐÁO ĐA DẠNG
-url = https://chieutrucsaigon.com/tin-tuc/tin-tuc-moi/chieu-truc-san-pham-doc-dao-da-dang-40.html
+match = -38.1%%
+title = XU HƯỚNG SỬ DỤNG CHIẾU TĂM TRÚC NĂM 2019
+url = https://chieutrucsaigon.com/tin-tuc/tin-tuc-moi/xu-huong-su-dung-chieu-tam-truc-nam-2019-68.html
 
 [chieutrelanlan.com]
 match = -76.2%%
@@ -42,9 +42,9 @@ title = Phân phối chiếu trúc Việt Nam giá rẻ tại Hà Nội
 url = https://thegioichieutruc.com/
 
 [www.facebook.com]
-match = 50.0%%
-title = CHIẾU TRÚC | Hanoi
-url = https://www.facebook.com/chieutrucviet/?locale=vi_VN
+match = 28.6%%
+title = Chiếu Hương Trúc | Lang Son
+url = https://www.facebook.com/chieuhuongtrucls/?locale=vi_VN
 
 [chieutruccaobang.com.vn]
 match = 57.9%%
@@ -80,4 +80,29 @@ url = https://www.instagram.com/evgeny_stp_novikov/p/C4XtseLgHBJ/
 match = -95.2%%
 title = Chiếu Trúc Hương Trúc - Chiếu nằm mùa hè cao cấp - Kho đệm
 url = https://khodem.vn/chieu-truc-huong-truc/
+
+[m.facebook.com]
+match = -52.4%%
+title = 30/9/2020. ❤️Cùng ghé HT tạo ra những ...
+url = https://m.facebook.com/2758216257755615/
+
+[kenh14.vn]
+match = -119.0%%
+title = Thấy nữ nhân viên ngồi im bất thường khi đang trực đêm ...
+url = https://kenh14.vn/thay-nu-nhan-vien-ngoi-im-bat-thuong-khi-dang-truc-dem-co-quan-giam-sat-kiem-tra-camera-vach-tran-chieu-tro-cua-nam-bao-ve-va-cong-ty-20231112160519925.chn
+
+[btmc.vn]
+match = -133.3%%
+title = Công ty TNHH Bảo Tín Minh Châu - BTMC.VN - Giá vàng, Gia ...
+url = https://btmc.vn/
+
+[www.jetro.go.jp]
+match = -104.8%%
+title = The Potential Vietnamese Companies in Southern Vietnam
+url = https://www.jetro.go.jp/ext_images/world/asia/vn/company/pdf/s202214.pdf
+
+[www.maybank-kimeng.com.vn]
+match = -71.4%%
+title = DIEU LE CONG TY TNHH MOT THANH VIEN CHITNG ...
+url = https://www.maybank-kimeng.com.vn/kimengportal/userfiles/upload/file/MBKE_Dieule15122016.pdf
 
