--- a/images/ga-chun-dreamland-180x200-ct/config.ini
+++ b/images/ga-chun-dreamland-180x200-ct/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/ga-chun-dreamland-180x200-ct.html
 lastopen = 2024-06-07 01:32:20
 
 [search]
-lastsearch = 2024-07-19 17:47:44
+lastsearch = 2024-07-19 22:53:10
 
 [demxanh.com]
 match = -42.9%%
-title = Bộ chăn ga gối cotton 5 món chăn hè ga chun chần 17
-url = https://demxanh.com/bo-chan-ga-goi-cotton-5-mon-chan-he-ga-chun-chan-17.html
+title = Bộ chăn ga gối cotton 5 món chăn hè ga chun chần 13
+url = https://demxanh.com/bo-chan-ga-goi-cotton-5-mon-chan-he-ga-chun-chan-13.html
 
 [www.diepxuan.com]
-match = 25.0%%
-title = Ga phủ ESM20013 180x200 - Điệp Xuân
-url = https://www.diepxuan.com/ga-phu-esm20013-180x200.html
+match = 10.7%%
+title = Bộ ga chun chần MC20208 180x200 - Điệp Xuân
+url = https://www.diepxuan.com/bo-ga-chun-chan-mc20208-180x200.html
 
 [mgaleg.maryland.gov]
 match = -75.0%%
